--- a/prefect.yaml
+++ b/prefect.yaml
@@ -16,10 +16,13 @@ deployments:
     version: 1.0.0
 
     work_pool:
-      name: default
+      name: etl-pool
       work_queue_name: default
       job_variables:
-        image: rishhhav/etl-prefect:latest 
+        image: prefecthq/prefect:3-python3.12
+        pre_execution_script: |
+          pip install -r ETL_pipeline/requirements.txt
+
 
 
 
