--- a/prefect.yaml
+++ b/prefect.yaml
@@ -16,7 +16,7 @@ deployments:
     version: 1.0.0
 
     work_pool:
-      name: default
+      name: etl-pool
       work_queue_name: default
       job_variables:
         image: prefecthq/prefect:3-python3.12
